# goldanalyst

./: .gitignore  README.md  gold_market_analysis.txt  gold_news.json  mock_trades.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
agents/: data_agent.py  deepseek_lora_agent.py  history_agent.py  multi_model_simulator.py  risk_agent.py  simulate_ds_comparison.py  simulate_ft_comparison.py  trading_agent.py
agents/models/: claude_haiku_agent.py  deepseek_LoRA_agent.py  deepseek_agent.py  gpt4o_agent.py  gpt4o_ft_agent.py  gpt4o_mini_base_agent.py
config/: llm.yaml  news_quality_scorer.yaml  trading.yaml
dashboard/: app.py  auto_archive.py  auto_scheduler.py  gold_market_analysis.txt  gold_news.json  pipeline_runner.py  style.css  update_gold_data.py
dashboard/components/: charts.py  strategy_cards.py
dashboard/data/: api_usage.json  error_tracker.json  gold_history.csv  gold_market_analysis.txt  gold_news.json  ledger.json  market_analysis.json  risk_report.json  trades_history.csv  trading_decision.json
data/: gold_history.csv  gold_market_analysis.txt  requirements.txt
dataset/dataset/: training_data_llm_improved.jsonl  (+5 more)
results/: performance_summary.csv
services/: data_service.py  risk_service.py  trading_service.py
test/: test_data_agent.py  test_error_handler.py  test_historical_news_collection.py  test_history_agent.py  test_llm_wrapper.py  test_risk_agent.py  test_trading_agent.py  test_validation.py
tests/: test_trading_agent.py
utils/: config_paths.py  error_handler.py  llm_wrapper.py  validation.py
(+80 files in other folders)
